# sandbox

./: CMakeLists.txt  README.md
asio_ros/: CMakeLists.txt  README.md  package.xml
asio_ros/src/: simulated_robot.cpp
collision_field/: CMakeLists.txt  package.xml  viz_collision.py
collision_field/src/: visualize_field.cpp
depth_viewer/: CMakeLists.txt  README.md  package.xml
depth_viewer/src/: depth_viewer.cpp
etherbotix/: CMakeLists.txt  package.xml  setup.py
etherbotix/nodes/: driver.py
etherbotix/scripts/: read_etherbotix.py  set_return_delay.py  write_gains.py
etherbotix/src/etherbotix/: base_controller.py  etherbotix.py  gps.py  gps_publisher.py  imu_publisher.py
firmware/: netapp.cpp
map_tools/: CMakeLists.txt  package.xml
map_tools/src/: octo_to_2d.cpp
sbpl_interface/: CMakeLists.txt  README.md  package.xml  sbpl_interface_plugin_description.xml
sbpl_interface/docs/: benchmarking.md  whole_body.md
sbpl_interface/include/sbpl_interface/: environment_chain3d.h  environment_chain3d_moveit.h  motion_primitives.h  planning_params.h  sbpl_planning_context.h  sbpl_planning_params.h  sbpl_visualizer_ros.h
sbpl_interface/include/sbpl_interface/bfs3d/: BFS_3D.h
sbpl_interface/scripts/: joint_goal.py  pose_based_goal.py  test.py
sbpl_interface/src/: environment_chain3d.cpp  environment_chain3d_moveit.cpp  sbpl_planning_context.cpp  sbpl_planning_manager.cpp
sbpl_interface/src/bfs3d/: BFS_3D.cpp  Search.cpp
sbpl_interface/test/: CMakeLists.txt  test_space.cpp
simple_grasping/: CMakeLists.txt  package.xml
simple_grasping/src/: object_support_segmentation.cpp
src/: client.cpp  server.cpp  simulated_driver.cpp
vanadium_maps/: CMakeLists.txt  apt_313.pgm  apt_313.yaml  ils.pgm  ils.yaml  package.xml  t2_apt_313.pgm
