<package>
  <name>etherbotix</name>
  <version>0.1.0</version>
  <description>
    Drivers for etherbotix board
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
</package>
